--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -428,16 +428,22 @@ th {
 
 /* LAYOUT STYLES */
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 15px;
-  font-weight: 400;
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: 200;
   line-height: 1.5;
   color: #666;
   background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
 }
 
+h3{
+    font-family: "Times New Roman", Times, serif;
+}
+
 p {
   margin-top: 0;
+  font-size: 18px;
+font-family: "Times New Roman", Times, serif;
 }
 
 a {
@@ -639,9 +645,7 @@ form {
 }
 #main-content h2:before {
   padding-right: 0.3em;
-  margin-left: -1.5em;
-  content: "//";
-  color: #9ddcff;
+  margin-left: -1.5em;  color: #9ddcff;
 }
 
 #main-content h3 {
@@ -657,7 +661,6 @@ form {
 #main-content h3:before {
   padding-right: 0.3em;
   margin-left: -2em;
-  content: "///";
   color: #9ddcff;
 }
 
@@ -672,9 +675,7 @@ form {
 
 h4:before {
   padding-right: 0.3em;
-  margin-left: -2.8em;
-  content: "////";
-  color: #9ddcff;
+  margin-left: -2.8em;  color: #9ddcff;
 }
 
 #main-content h5 {
@@ -687,7 +688,6 @@ h4:before {
 h5:before {
   padding-right: 0.3em;
   margin-left: -3.2em;
-  content: "/////";
   color: #9ddcff;
 }
 
@@ -701,8 +701,11 @@ h5:before {
 h6:before {
   padding-right: 0.3em;
   margin-left: -3.7em;
-  content: "//////";
   color: #9ddcff;
+}
+
+.fontFamily{
+  font-family: "Times New Roman", Times, serif;
 }
 
 p {
