--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -440,6 +440,10 @@ h3{
     font-family: "Times New Roman", Times, serif;
 }
 
+.picture{
+  background: url("../images/pic.jpg");
+}
+
 p {
   margin-top: 0;
   font-size: 18px;
